kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: novashop
  labels:
    app.kubernetes.io/name: novashop
    app.kubernetes.io/part-of: novashop
    app.kubernetes.io/managed-by: kubectl
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
