kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: novashop-frontend
  namespace: novashop
  labels:
    app.kubernetes.io/name: novashop-frontend
    app.kubernetes.io/instance: novashop
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: novashop
    app.kubernetes.io/managed-by: kubectl
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: novashop-frontend
    app.kubernetes.io/instance: novashop
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
